--- a/index.html
+++ b/index.html
@@ -116,16 +116,18 @@
 							</ul>
 						</article>
 						<article>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-							<h3>Help Me Study</h3>
+							<a href="https://github.com/kaitlinLewis/help-me-study-app" class="image"><img
+									src="images/work_mode.png" alt="Blue background with Help Me Study app logo" /></a>
+							<h3>Work Mode</h3>
 							<p>Users can login to create to-do lists and set timers to keep themselves on task.</p>
 							<!--<ul class="actions">
 								<li><a href="#" class="button">Site Here</a></li>
 							</ul>-->
 						</article>
 						<article>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-							<h3>La guerre de maths</h3>
+							<a href="#" class="image"><img src="images/guerre_des_maths.png"
+									alt="Dark blue background with La guerre des mathématiques written curved around an image of students and educational icons " /></a>
+							<h3>La guerre des mathématiques</h3>
 							<p>A community based math website for creating real-life problems for students. Users can
 								login, answer solutions, post questions, and search for errors.</p>
 							<!--<ul class="actions">
