--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo"><strong>Kaitlin Lewis:</strong> equality, accessibility, and
+					<a href="index.html" class="logo"><strong>Kaitlin Lewis:</strong> equity, accessibility, and
 						education for all</a>
 					<ul class="icons">
 						<li><a href="https://twitter.com/exploreeducate" class="icon brands fa-twitter"><span
@@ -100,9 +100,36 @@
 				<!-- Section -->
 				<section>
 					<header class="major">
-						<h2>Projects</h2>
+						<h2>Partnerships & Opportunities</h2>
 					</header>
 					<div class="posts">
+						<article>
+							<a href="https://kidscodeconference.netlify.app" class="image"><img src="images/pic05.jpg"
+									alt="" /></a>
+							<h3>Kids Code Conference</h3>
+							<p>An annual conference for students, teachers, and all invested in Ed Tech to join together
+								to listen, share, and
+								learn.</p>
+							<ul class="actions">
+								<li><a href="https://kidscodeconference.netlify.app" class="button">Site Here</a></li>
+							</ul>
+						</article>
+						<article>
+							<a href="#" class="image"><img src="images/well_family_logo.png"
+									alt="purple background with yellow writing saying Well Family" /></a>
+							<h3>Well Family Consultancy</h3>
+							<p>Well Family, in partnership with families and communities, helps multi-ability households
+								successfully
+								navigate and thrive at every stage of life by directly addressing the most prominent but
+								significantly
+								under supported issues such as lack of support and community, difficult transitions,
+								inclusive education,
+								community-driven advocacy and mental health and wellness support with a differentiated
+								approach.</p>
+							<ul class="actions">
+								<li><a href="#" class="button">Site Here</a></li>
+							</ul>
+						</article>
 						<article>
 							<a href="https://github.com/kaitlinLewis/chat-app.git" class="image"><img
 									src="images/EduChatLogo.png"
@@ -111,7 +138,8 @@
 							<p>A chat app that allows teachers and families to have real time, authentic conversations
 								either 1:1 or in group chats.</p>
 							<ul class="actions">
-								<li><a href="https://github.com/kaitlinLewis/chat-app.git" class="button">Code Here</a>
+								<li><a href="https://github.com/kaitlinLewis/chat-app.git" class="button">Code along
+										here!</a>
 								</li>
 							</ul>
 						</article>
@@ -120,9 +148,9 @@
 									src="images/work_mode.png" alt="Blue background with Help Me Study app logo" /></a>
 							<h3>Work Mode</h3>
 							<p>Users can login to create to-do lists and set timers to keep themselves on task.</p>
-							<!--<ul class="actions">
-								<li><a href="#" class="button">Site Here</a></li>
-							</ul>-->
+							<ul class="actions">
+								<li><a href="https://workmode.netlify.app/" class="button">Code along here!</a></li>
+							</ul>
 						</article>
 						<article>
 							<a href="#" class="image"><img src="images/guerre_des_maths.png"
@@ -130,9 +158,9 @@
 							<h3>La guerre des mathématiques</h3>
 							<p>A community based math website for creating real-life problems for students. Users can
 								login, answer solutions, post questions, and search for errors.</p>
-							<!--<ul class="actions">
-								<li><a href="#" class="button">Site here</a></li>
-							</ul>-->
+							<ul class="actions">
+								<li><a href="#" class="button">Code along here!</a></li>
+							</ul>
 						</article>
 						<!--<article>
 							<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
@@ -142,17 +170,9 @@
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-							<h3>AVAR Environmental Inc</h3>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-								facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</article>
-						<article>
+						</article>-->
+
+						<!--<article>
 							<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
 							<h3>McCracken Remodelling</h3>
 							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
