--- a/generic.html
+++ b/generic.html
@@ -24,7 +24,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo"><strong>Kaitlin Lewis: </strong> equality, accessibility, and
+					<a href="index.html" class="logo"><strong>Kaitlin Lewis: </strong> equity, accessibility, and
 						education for all</a>
 					<ul class="icons">
 						<li><a href="https://twitter.com/exploreeducate" class="icon brands fa-twitter"><span
@@ -40,7 +40,7 @@
 				<!-- Content -->
 				<section>
 					<header class="main">
-						<h1>Generic</h1>
+						<h1>About Me</h1>
 					</header>
 
 					<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
