--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 							the ability to transcend barriers and assist users accessing information. I am now seeking
 							to leverage tech in different ways in order to ensure access to information to all and
 							create tools and resources to support education.</p>
-						<!--<ul class="actions">
-							<li><a href="#" class="button big">Learn More</a></li>
-						</ul>-->
+						<ul class="actions">
+							<li><a href="/generic.html" class="button big">Learn More</a></li>
+						</ul>
 					</div>
 					<span class="image object">
 						<img src="images/pic10.jpg" alt="Kaitlin standing alone in front of trees smiling" />
@@ -159,7 +159,7 @@
 							<p>A community based math website for creating real-life problems for students. Users can
 								login, answer solutions, post questions, and search for errors.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">Code along here!</a></li>
+								<li><a href="#" class="button">Coming soon!</a></li>
 							</ul>
 						</article>
 						<!--<article>
@@ -205,8 +205,8 @@
 					</header>
 					<ul>
 						<li><a href="index.html">Homepage</a></li>
-						<!--<li><a href="generic.html">About Me</a></li>
-						<li><a href="elements.html">Elements</a></li>-->
+						<li><a href="generic.html">About Me</a></li>
+						<!--<li><a href="elements.html">Elements</a></li>-->-->
 						<!--<li>
 							<span class="opener">Submenu</span>
 							<ul>
@@ -229,12 +229,12 @@
 						</li>
 						<li><a href="#">Maximus Erat</a></li>
 						<li><a href="#">Sapien Mauris</a></li>
-						<li><a href="#">Amet Lacinia</a></li>-->
+						<li><a href="#">Amet Lacinia</a></li>
 					</ul>
 				</nav>
 
 				<!-- Section -->
-				<!--<section>
+						<!--<section>
 					<header class="major">
 						<h2>Ante interdum</h2>
 					</header>
@@ -257,27 +257,27 @@
 					</ul>
 				</section>-->
 
-				<!-- Section -->
-				<section>
-					<header class="major">
-						<h2>Let's Chat!</h2>
-					</header>
-					<p>I am currently looking for interesting and exciting partnerships and opportunities.</p>
-					<ul class="contact">
+						<!-- Section -->
+						<section>
+							<header class="major">
+								<h2>Let's Chat!</h2>
+							</header>
+							<p>I am currently looking for interesting and exciting partnerships and opportunities.</p>
+							<ul class="contact">
 
 
-						<li class="icon solid fa-envelope"><a href="#">kaitlinlewis.dev@gmail.com</a></li>
-						<li class="icon solid brands fa-twitter">@exploreeducate</li>
-						<li class="icon solid brands fa-github">kaitlinLewis</li>
-					</ul>
-				</section>
+								<li class="icon solid fa-envelope"><a href="#">kaitlinlewis.dev@gmail.com</a></li>
+								<li class="icon solid brands fa-twitter">@exploreeducate</li>
+								<li class="icon solid brands fa-github">kaitlinLewis</li>
+							</ul>
+						</section>
 
-				<!-- Footer -->
-				<footer id="footer">
-					<p class="copyright">&copy; Kaitlin Lewis. All rights reserved. Design: <a
-							href="https://html5up.net">HTML5
-							UP</a>.</p>
-				</footer>
+						<!-- Footer -->
+						<footer id="footer">
+							<p class="copyright">&copy; Kaitlin Lewis. All rights reserved. Design: <a
+									href="https://html5up.net">HTML5
+									UP</a>.</p>
+						</footer>
 
 			</div>
 		</div>
