--- a/generic.html
+++ b/generic.html
@@ -45,27 +45,33 @@
 
 					<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 
-					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
-						venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim
-						auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque
-						in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar
-						mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque
-						enim turpis, hendrerit.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class
-						aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam
-						tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc
-						ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non,
-						bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus.
-						Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In
-						non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.
+					<p>When I was younger, I had a passion for solving puzzles and learning languages. I headed to uni
+						wanting to do math but
+						nobody told me the numbers run out so quickly! To
+						satisfy my desire to have an impact on the world around me, I set my sights instead on becoming
+						a French Immersion
+						teacher. In my first year, I was invited to attend a workshop about Arduino, micro:bits, bread
+						boards, and raspberry pi. I was so excited about all of the possibilities and began
+						incorporating those technologies and coding
+						into my lessons about geography, history, math, and science. I co-led the robotics team and
+						fundraised $5,000 to build a maker space in the school. And then
+						the pandemic hit and I volunteered to teach online full time. I quickly realized that there
+						was
+						a lack of online
+						resources to facilitate teaching online and I leaned into my love of learning languages and
+						puzzles to code resources
+						that would help myself and my students.
 					</p>
-					<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor
-						imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet.
-						Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at,
-						elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+					<p>Teaching in a traditional setting and online made me realize that there is not a
+						one-size-fits-all model for people. There are so many unique ways of understanding, processing,
+						and producing information and data and when we can employ technology as a tool to foster that
+						diversity of thought, our community is so much better off!
+					</p>
+					<p>I adore Hamilton (nobody loves Hamilton more than a Hamiltonian) and am a sucker for delicious
+						food, hiking or kayaking, a good book, and attending engaging community events. </p>
 
 					<hr class="major" />
-
+					<!--
 					<h2>Interdum sed dapibus</h2>
 					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
 						venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim
@@ -117,7 +123,7 @@
 						bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus.
 						Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In
 						non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.
-					</p>
+					</p>-->
 
 				</section>
 
