--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 					<ul>
 						<li><a href="index.html">Homepage</a></li>
 						<li><a href="generic.html">About Me</a></li>
-						<!--<li><a href="elements.html">Elements</a></li>-->-->
+						<!--<li><a href="elements.html">Elements</a></li>-->
 						<!--<li>
 							<span class="opener">Submenu</span>
 							<ul>
