--- a/generic.html
+++ b/generic.html
@@ -43,7 +43,8 @@
 						<h1>About Me</h1>
 					</header>
 
-					<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+					<span class="image main"><img src="images/KLat beach.jpeg"
+							alt="White woman leans over to pet a small dog on sandy beach with sunset behind her" /></span>
 
 					<p>When I was younger, I had a passion for solving puzzles and learning languages. I headed to uni
 						wanting to do math but
@@ -135,11 +136,11 @@
 			<div class="inner">
 
 				<!-- Search -->
-				<section id="search" class="alt">
+				<!--<section id="search" class="alt">
 					<form method="post" action="#">
 						<input type="text" name="query" id="query" placeholder="Search" />
 					</form>
-				</section>
+				</section>-->
 
 				<!-- Menu -->
 				<nav id="menu">
@@ -149,7 +150,7 @@
 					<ul>
 						<li><a href="index.html">Homepage</a></li>
 						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<!--<li><a href="elements.html">Elements</a></li>
 						<li>
 							<span class="opener">Submenu</span>
 							<ul>
@@ -172,12 +173,12 @@
 						</li>
 						<li><a href="#">Maximus Erat</a></li>
 						<li><a href="#">Sapien Mauris</a></li>
-						<li><a href="#">Amet Lacinia</a></li>
+						<li><a href="#">Amet Lacinia</a></li>-->
 					</ul>
 				</nav>
 
 				<!-- Section -->
-				<section>
+				<!--<section>
 					<header class="major">
 						<h2>Ante interdum</h2>
 					</header>
@@ -198,28 +199,27 @@
 					<ul class="actions">
 						<li><a href="#" class="button">More</a></li>
 					</ul>
-				</section>
+				</section>-->
 
 				<!-- Section -->
 				<section>
 					<header class="major">
-						<h2>Get in touch</h2>
+						<h2>Let's Chat!</h2>
 					</header>
-					<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem
-						ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat
-						tempus aliquam.</p>
+					<p>I am currently looking for interesting and exciting partnerships and opportunities.</p>
 					<ul class="contact">
-						<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-						<li class="icon solid fa-phone">(000) 000-0000</li>
-						<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-							Nashville, TN 00000-0000</li>
+
+
+						<li class="icon solid fa-envelope"><a href="#">kaitlinlewis.dev@gmail.com</a></li>
+						<li class="icon solid brands fa-twitter">@exploreeducate</li>
+						<li class="icon solid brands fa-github">kaitlinLewis</li>
 					</ul>
 				</section>
 
 				<!-- Footer -->
 				<footer id="footer">
-					<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a
-							href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5
+					<p class="copyright">&copy; Kaitlin Lewis. All rights reserved. Design: <a
+							href="https://html5up.net">HTML5
 							UP</a>.</p>
 				</footer>
 
