logo for kids code conference

--- a/generic.html
+++ b/generic.html
@@ -29,11 +29,11 @@
 					<ul class="icons">
 						<li><a href="https://twitter.com/exploreeducate" class="icon brands fa-twitter"><span
 									class="label">Twitter</span></a></li>
-						<!--<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
-						<!--<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a>-->
-						<!--</li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>-->
+						<li><a href="https://github.com/kaitlinLewis" class="icon brands fa-github"><span
+									class="label">GitHub</span></a>
+						</li>
+						<li><a href="https://www.linkedin.com/in/kaitlinmlewis/" class="icon brands fa-linkedin"><span
+									class="label">LinkedIn</span></a></li>
 					</ul>
 				</header>
 
@@ -149,7 +149,7 @@
 					</header>
 					<ul>
 						<li><a href="index.html">Homepage</a></li>
-						<li><a href="generic.html">Generic</a></li>
+						<!--<li><a href="generic.html">Generic</a></li>-->
 						<!--<li><a href="elements.html">Elements</a></li>
 						<li>
 							<span class="opener">Submenu</span>
