--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 									class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/kaitlinLewis" class="icon brands fa-github"><span
 									class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/kaitlinmlewis/" class="icon brands fa-linkedin"><span
+									class="label">LinkedIn</span></a></li>
 					</ul>
 				</header>
 
@@ -52,7 +53,7 @@
 						</ul>
 					</div>
 					<span class="image object">
-						<img src="images/pic10.jpg" alt="Kaitlin standing alone in front of trees smiling" />
+						<img src="images/pic10.jpg" alt="Kaitlin standing alone in front of a graffiti wall smiling" />
 					</span>
 				</section>
 
@@ -104,8 +105,9 @@
 					</header>
 					<div class="posts">
 						<article>
-							<a href="https://kidscodeconference.netlify.app" class="image"><img src="images/pic05.jpg"
-									alt="" /></a>
+							<a href="https://kidscodeconference.netlify.app" class="image"><img
+									src="images/kids_code_conference_logo.png"
+									alt="white background with Kids Code Conference in blue rectangle" /></a>
 							<h3>Kids Code Conference</h3>
 							<p>An annual conference for students, teachers, and all invested in Ed Tech to join together
 								to listen, share, and
@@ -114,7 +116,7 @@
 								<li><a href="https://kidscodeconference.netlify.app" class="button">Site Here</a></li>
 							</ul>
 						</article>
-						<article>
+						<!--<article>
 							<a href="#" class="image"><img src="images/well_family_logo.png"
 									alt="purple background with yellow writing saying Well Family" /></a>
 							<h3>Well Family Consultancy</h3>
@@ -129,7 +131,7 @@
 							<ul class="actions">
 								<li><a href="#" class="button">Site Here</a></li>
 							</ul>
-						</article>
+						</article>-->
 						<article>
 							<a href="https://github.com/kaitlinLewis/chat-app.git" class="image"><img
 									src="images/EduChatLogo.png"
