--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<a href="index.html" class="logo"><strong>Kaitlin Lewis:</strong> equity, accessibility, and
 						education for all</a>
 					<ul class="icons">
-						<li><a href="https://twitter.com/exploreeducate" class="icon brands fa-twitter"><span
+						<li><a href="https://twitter.com/ctrlshiftkait" class="icon brands fa-twitter"><span
 									class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/kaitlinLewis" class="icon brands fa-github"><span
 									class="label">GitHub</span></a></li>
@@ -49,7 +49,7 @@
 							to leverage tech in different ways in order to ensure access to information to all and
 							create tools and resources to support education.</p>
 						<ul class="actions">
-							<li><a href="/generic.html" class="button big">Learn More</a></li>
+							<li><a href="/generic.html" class="button big">About Me</a></li>
 						</ul>
 					</div>
 					<span class="image object">
@@ -132,7 +132,7 @@
 								<li><a href="#" class="button">Site Here</a></li>
 							</ul>
 						</article>-->
-						<article>
+						<!--<article>
 							<a href="https://github.com/kaitlinLewis/chat-app.git" class="image"><img
 									src="images/EduChatLogo.png"
 									alt="White background with purple words saying EduChat" /></a>
@@ -144,7 +144,7 @@
 										here!</a>
 								</li>
 							</ul>
-						</article>
+						</article>-->
 						<article>
 							<a href="https://github.com/kaitlinLewis/help-me-study-app" class="image"><img
 									src="images/work_mode.png" alt="Blue background with Help Me Study app logo" /></a>
@@ -268,9 +268,17 @@
 							<ul class="contact">
 
 
-								<li class="icon solid fa-envelope"><a href="#">kaitlinlewis.dev@gmail.com</a></li>
-								<li class="icon solid brands fa-twitter">@exploreeducate</li>
-								<li class="icon solid brands fa-github">kaitlinLewis</li>
+								<li class="icon solid fa-envelope"><a
+										href="mailto:kaitlinlewis.dev@gmail.com">kaitlinlewis.dev@gmail.com</a></li>
+								<li><a href="https://twitter.com/ctrlshiftkait" class="icon brands fa-twitter"><span
+											class="label">twitter.com/kaitlinLewis</span></a>
+								</li>
+								<li><a href="https://github.com/kaitlinLewis" class="icon brands fa-github"><span
+											class="label">github.com/kaitlinLewis</span></a>
+								</li>
+								<li><a href="https://www.linkedin.com/in/kaitlinmlewis/"
+										class="icon brands fa-linkedin"><span
+											class="label">linkedin.com/kaitlinLewis</span></a></li>
 							</ul>
 						</section>
 
