--- a/generic.html
+++ b/generic.html
@@ -27,7 +27,7 @@
 					<a href="index.html" class="logo"><strong>Kaitlin Lewis: </strong> equity, accessibility, and
 						education for all</a>
 					<ul class="icons">
-						<li><a href="https://twitter.com/exploreeducate" class="icon brands fa-twitter"><span
+						<li><a href="https://twitter.com/ctrlshiftkait" class="icon brands fa-twitter"><span
 									class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/kaitlinLewis" class="icon brands fa-github"><span
 									class="label">GitHub</span></a>
@@ -43,7 +43,7 @@
 						<h1>About Me</h1>
 					</header>
 
-					<span class="image main"><img src="images/KLat beach.jpeg"
+					<span class="image main"><img src="images/pic10.jpg"
 							alt="White woman leans over to pet a small dog on sandy beach with sunset behind her" /></span>
 
 					<p>When I was younger, I had a passion for solving puzzles and learning languages. I headed to uni
@@ -210,9 +210,16 @@
 					<ul class="contact">
 
 
-						<li class="icon solid fa-envelope"><a href="#">kaitlinlewis.dev@gmail.com</a></li>
-						<li class="icon solid brands fa-twitter">@exploreeducate</li>
-						<li class="icon solid brands fa-github">kaitlinLewis</li>
+						<li class="icon solid fa-envelope"><a
+								href="mailto:kaitlinlewis.dev@gmail.com">kaitlinlewis.dev@gmail.com</a></li>
+						<li><a href="https://twitter.com/ctrlshiftkait" class="icon brands fa-twitter"><span
+									class="label">twitter.com/kaitlinLewis</span></a>
+						</li>
+						<li><a href="https://github.com/kaitlinLewis" class="icon brands fa-github"><span
+									class="label">github.com/kaitlinLewis</span></a>
+						</li>
+						<li><a href="https://www.linkedin.com/in/kaitlinmlewis/" class="icon brands fa-linkedin"><span
+									class="label">linkedin.com/kaitlinLewis</span></a></li>
 					</ul>
 				</section>
 
