side menu issue fix

--- a/generic.html
+++ b/generic.html
@@ -38,7 +38,54 @@
 				</header>
 
 				<!-- Content -->
-				<section>
+				<section id="banner">
+					<div class="content">
+						<header>
+							<h1>About Me
+							</h1>
+
+						</header>
+						<p>When I was younger, I had a passion for solving puzzles and learning languages. I headed to
+							uni
+							wanting to do math but
+							nobody told me the numbers run out so quickly! To
+							satisfy my desire to have an impact on the world around me, I set my sights instead on
+							becoming
+							a French Immersion
+							teacher. In my first year, I was invited to attend a workshop about Arduino, micro:bits,
+							bread
+							boards, and raspberry pi. I was so excited about all of the possibilities and began
+							incorporating those technologies and coding
+							into my lessons about geography, history, math, and science. I co-led the robotics team and
+							fundraised $5,000 to build a maker space in the school. And then
+							the pandemic hit and I volunteered to teach online full time. I quickly realized that there
+							was
+							a lack of online
+							resources to facilitate teaching online and I leaned into my love of learning languages and
+							puzzles to code resources
+							that would help myself and my students.
+						</p>
+						<p>Teaching in a traditional setting and online made me realize that there is not a
+							one-size-fits-all model for people. There are so many unique ways of understanding,
+							processing,
+							and producing information and data and when we can employ technology as a tool to foster
+							that
+							diversity of thought, our community is so much better off!
+						</p>
+						<p>I adore Hamilton (nobody loves Hamilton more than a Hamiltonian) and am a sucker for
+							delicious
+							food, hiking or kayaking, a good book, and attending engaging community events. </p>
+						<!--<ul class="actions">
+							<li><a href="/generic.html" class="button big">About Me</a></li>
+						</ul>-->
+					</div>
+					<span class="image object">
+						<img src="images/KLat beach.jpeg	"
+							alt="Kaitlin standing alone in front of a graffiti wall smiling" />
+					</span>
+				</section>
+
+				<!--<section>
 					<header class="main">
 						<h1>About Me</h1>
 					</header>
@@ -71,8 +118,8 @@
 					<p>I adore Hamilton (nobody loves Hamilton more than a Hamiltonian) and am a sucker for delicious
 						food, hiking or kayaking, a good book, and attending engaging community events. </p>
 
-					<hr class="major" />
-					<!--
+					<hr class="major" />-->
+				<!--
 					<h2>Interdum sed dapibus</h2>
 					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
 						venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim
@@ -212,14 +259,14 @@
 
 						<li class="icon solid fa-envelope"><a
 								href="mailto:kaitlinlewis.dev@gmail.com">kaitlinlewis.dev@gmail.com</a></li>
-						<li><a href="https://twitter.com/ctrlshiftkait" class="icon brands fa-twitter"><span
-									class="label">twitter.com/kaitlinLewis</span></a>
+						<li class="icon brands fa-twitter"><a
+								href="https://twitter.com/ctrlshiftkait">twitter.com/kaitlinLewis</a>
 						</li>
-						<li><a href="https://github.com/kaitlinLewis" class="icon brands fa-github"><span
-									class="label">github.com/kaitlinLewis</span></a>
+						<li class="icon brands fa-github"><a
+								href="https://github.com/kaitlinLewis">github.com/kaitlinLewis</a>
 						</li>
-						<li><a href="https://www.linkedin.com/in/kaitlinmlewis/" class="icon brands fa-linkedin"><span
-									class="label">linkedin.com/kaitlinLewis</span></a></li>
+						<li class="icon brands fa-linkedin"><a
+								href="https://www.linkedin.com/in/kaitlinmlewis/">linkedin.com/kaitlinLewis</a></li>
 					</ul>
 				</section>
 
