--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
 					<ul>
 						<li><a href="index.html">Homepage</a></li>
 						<li><a href="generic.html">About Me</a></li>
-						<!--<li><a href="elements.html">Elements</a></li>-->
-						<!--<li>
+						<!--<li><a href="elements.html">Elements</a></li>
+						<li>
 							<span class="opener">Submenu</span>
 							<ul>
 								<li><a href="#">Lorem Dolor</a></li>
@@ -231,12 +231,12 @@
 						</li>
 						<li><a href="#">Maximus Erat</a></li>
 						<li><a href="#">Sapien Mauris</a></li>
-						<li><a href="#">Amet Lacinia</a></li>
+						<li><a href="#">Amet Lacinia</a></li>-->
 					</ul>
 				</nav>
 
-				<!-- Section -->
-						<!--<section>
+				<!--Section-->
+				<!--<section>
 					<header class="major">
 						<h2>Ante interdum</h2>
 					</header>
@@ -257,37 +257,38 @@
 					<ul class="actions">
 						<li><a href="#" class="button">More</a></li>
 					</ul>
-				</section>-->
+				</section>
 
 						<!-- Section -->
-						<section>
-							<header class="major">
-								<h2>Let's Chat!</h2>
-							</header>
-							<p>I am currently looking for interesting and exciting partnerships and opportunities.</p>
-							<ul class="contact">
+				<section>
+					<header class="major">
+						<h2>Let's Chat!</h2>
+					</header>
+					<p>I am currently looking for interesting and exciting partnerships and opportunities.</p>
+					<ul class="contact">
 
 
-								<li class="icon solid fa-envelope"><a
-										href="mailto:kaitlinlewis.dev@gmail.com">kaitlinlewis.dev@gmail.com</a></li>
-								<li><a href="https://twitter.com/ctrlshiftkait" class="icon brands fa-twitter"><span
-											class="label">twitter.com/kaitlinLewis</span></a>
-								</li>
-								<li><a href="https://github.com/kaitlinLewis" class="icon brands fa-github"><span
-											class="label">github.com/kaitlinLewis</span></a>
-								</li>
-								<li><a href="https://www.linkedin.com/in/kaitlinmlewis/"
-										class="icon brands fa-linkedin"><span
-											class="label">linkedin.com/kaitlinLewis</span></a></li>
-							</ul>
-						</section>
+						<li class="icon solid fa-envelope"><a
+								href="mailto:kaitlinlewis.dev@gmail.com">kaitlinlewis.dev@gmail.com</a>
+						</li>
+						<li class="icon brands fa-twitter"><a
+								href="https://twitter.com/ctrlshiftkait">twitter.com/kaitlinLewis</a>
+						</li>
+						<li class="icon brands fa-github"><a
+								href="https://github.com/kaitlinLewis">github.com/kaitlinLewis</a>
+						</li>
+						<li class="icon brands fa-linkedin"><a
+								href="https://www.linkedin.com/in/kaitlinmlewis/">linkedin.com/kaitlinLewis</a>
+						</li>
+					</ul>
+				</section>
 
-						<!-- Footer -->
-						<footer id="footer">
-							<p class="copyright">&copy; Kaitlin Lewis. All rights reserved. Design: <a
-									href="https://html5up.net">HTML5
-									UP</a>.</p>
-						</footer>
+				<!-- Footer -->
+				<footer id="footer">
+					<p class="copyright">&copy; Kaitlin Lewis. All rights reserved. Design: <a
+							href="https://html5up.net">HTML5
+							UP</a>.</p>
+				</footer>
 
 			</div>
 		</div>
