Added Well Family

--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@
 										Here</a></li>
 							</ul>
 						</article>
-						<!--<article>
-							<a href="#" class="image"><img src="images/well_family_logo.png"
+						<article>
+							<a href="https://www.wellfamilyconsultancy.com/" target="_blank" class="image"><img
+									src="images/well_family_logo.png"
 									alt="purple background with yellow writing saying Well Family" /></a>
 							<h3>Well Family Consultancy</h3>
 							<p>Well Family, in partnership with families and communities, helps multi-ability households
@@ -132,7 +133,7 @@
 							<ul class="actions">
 								<li><a href="#" class="button">Site Here</a></li>
 							</ul>
-						</article>-->
+						</article>
 						<!--<article>
 							<a href="https://github.com/kaitlinLewis/chat-app.git" class="image"><img
 									src="images/EduChatLogo.png"
@@ -146,6 +147,17 @@
 								</li>
 							</ul>
 						</article>-->
+						<article>
+							<a href="https://github.com/kaitlinLewis/help-me-study-app" class="image"
+								target="_blank"><img src="images/work_mode.png"
+									alt="Blue background with Help Me Study app logo" /></a>
+							<h3>Work Mode</h3>
+							<p>Users can login to create to-do lists and set timers to keep themselves on task.</p>
+							<ul class="actions">
+								<li><a href="https://workmode.netlify.app/" class="button" target="_blank">Code along
+										here!</a></li>
+							</ul>
+						</article>
 						<article>
 							<a href="https://github.com/kaitlinLewis/help-me-study-app" class="image"
 								target="_blank"><img src="images/work_mode.png"
