added link to button

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 								community-driven advocacy and mental health and wellness support with a differentiated
 								approach.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">Site Here</a></li>
+								<li><a href="https://www.wellfamilyconsultancy.com/" class="button">Site Here</a></li>
 							</ul>
 						</article>
 						<!--<article>
