added link for guerre des maths

--- a/index.html
+++ b/index.html
@@ -148,9 +148,8 @@
 							</ul>
 						</article>-->
 						<article>
-							<a href="https://github.com/kaitlinLewis/help-me-study-app" class="image"
-								target="_blank"><img src="images/work_mode.png"
-									alt="Blue background with Help Me Study app logo" /></a>
+							<a href="https://workmode.netlify.app/" class="image" target="_blank"><img
+									src="images/work_mode.png" alt="Blue background with Help Me Study app logo" /></a>
 							<h3>Work Mode</h3>
 							<p>Users can login to create to-do lists and set timers to keep themselves on task.</p>
 							<ul class="actions">
@@ -159,24 +158,15 @@
 							</ul>
 						</article>
 						<article>
-							<a href="https://github.com/kaitlinLewis/help-me-study-app" class="image"
-								target="_blank"><img src="images/work_mode.png"
-									alt="Blue background with Help Me Study app logo" /></a>
-							<h3>Work Mode</h3>
-							<p>Users can login to create to-do lists and set timers to keep themselves on task.</p>
-							<ul class="actions">
-								<li><a href="https://workmode.netlify.app/" class="button" target="_blank">Code along
-										here!</a></li>
-							</ul>
-						</article>
-						<article>
-							<a href="#" class="image" target="_blank"><img src="images/guerre_des_maths.png"
+							<a href="guerredesmaths.netlify.app" class="image" target="_blank"><img
+									src="images/guerre_des_maths.png"
 									alt="Dark blue background with La guerre des mathématiques written curved around an image of students and educational icons " /></a>
 							<h3>La guerre des mathématiques</h3>
 							<p>A community based math website for creating real-life problems for students. Users can
 								login, answer solutions, post questions, and search for errors.</p>
 							<ul class="actions">
-								<li><a href="#" class="button" target="_blank">Coming soon!</a></li>
+								<li><a href="guerredesmaths.netlify.app" class="button" target="_blank">Coming soon!</a>
+								</li>
 							</ul>
 						</article>
 						<!--<article>
